# cctp-cli

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
