[package]
name = "cctp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.5", features = ["signer-trezor"] }
alloy-chains = "0.2"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
cctp-rs = "6.2"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
