[package]
name = "cctp"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Joseph Livesey <jlivesey@gmail.com>"]
description = "Trezor-backed CLI for bridging USDC with Circle CCTP via cctp-rs."
license = "Apache-2.0"
repository = "https://github.com/suchapalaver/cctp"
homepage = "https://github.com/suchapalaver/cctp"
readme = "README.md"
keywords = ["cctp", "usdc", "circle", "bridge", "trezor"]
categories = ["command-line-utilities", "finance"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    ".env.example",
    "src/main.rs",
]

[dependencies]
alloy = { version = "2.0.5", features = ["signer-trezor"] }
alloy-chains = "0.2"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
cctp-rs = "6.2"
dotenvy = "0.15"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
